<resources>
    <string name="app_name">Car</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Magtonic</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_about">About</string>invalid_license_plate
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hide_keyboard">Hide Keyboard</string>
    <string name="show_keyboard">Show Keyboard</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="exit_app_msg">Exit from this app?</string>

    <string name="get_or_send_failed_wifi_is_not_connected">Cannot get or post from webservice due to wifi connection is
        lost.
    </string>
    <string name="barcode_scanning_get_info">Getting Information...</string>
    <string name="barcode_scan_off_because_wifi_is_not_connected">Scan barcode is useless while WiFi is not connected.</string>
    <string name="receipt_this_receipt_not_exist">This receipt no is not exist</string>
    <string name="toast_network_error">Network error</string>
    <string name="toast_server_error">Server error</string>

    <string name="receipt_barcode_input_hint">Scan barcode or input</string>

    <string name="nav_guest">Supplier</string>
    <string name="btn_guest_leave">Leave</string>
    <string name="guest_in_title">"Please check plant and guest No. "</string>
    <string name="btn_guest_in">In</string>
    <string name="guest_in_no">No.</string>
    <string name="guest_in_or_out_dialog_in_date">In Date</string>
    <string name="version_string">Version: %d.%s</string>
    <string name="nav_text">Text OCR</string>
    <string name="license_plate_empty">License plate can not be empty</string>
    <string name="invalid_license_plate">Invalid license plate</string>
    <string name="license_plate_select_image">Select Image</string>
    <string name="license_plate_take_photo">Take Picture</string>
    <string name="recognize_failed">Failed</string>
    <string name="detect_hint">Detected text will appear here.</string>
    <string name="detect_no_text_found">No text found</string>
    <string name="nav_shipment_check">Shipment Check</string>
    <string name="shipment_history">history</string>
    <string name="nav_signature">Shipment Signing</string>
    <string name="input_shipment_no">scan or input shipment no</string>
    <string name="shipment_input_no_empty">Shipment No Empty</string>
    <string name="shipment_no_and_order_no">S.P No./Order No.</string>
    <string name="customer_no">Customer</string>
    <string name="shipment_dialog_title">Sign for this Shipment No?</string>
    <string name="btn_prev">Prev</string>
    <string name="draw_clear_screen">Clean</string>
    <string name="draw_save_file">Save</string>
    <string name="shipment_sign_confirm">Signature Confirm</string>
    <string name="draw_save_title">Save signature and upload?</string>
    <string name="connect_timeout">Connectiton timeout. Please check your network or firewall configuration.</string>
    <string name="ftp_connect_error">Connect error. Please confirm your account and password.</string>
    <string name="shipment_signature_upload_failed">Sign upload failed</string>
    <string name="shipment_signature_upload_success">Sign upload success</string>
    <string name="shipment_signature_confirm_failed">Sign upload confirm failed</string>
    <string name="shipment_signature_confirm_success">Sign upload confirm success</string>
    <string name="shipment_no">Shipment No.</string>
    <string name="shipment_signature_driver">Driver</string>
    <string name="shipment_signature_guard">Guard</string>
    <string name="shipment_signature_let_driver_sign">Driver Sign</string>
    <string name="shipment_signature_let_guard_sign">Guard Sign</string>
    <string name="shipment_no_multi_sign_add">Add to sign list</string>
    <string name="shipment_no_multi_sign_exist">Shipment No exist.</string>
    <string name="shipment_signature_multi_list">Sign multi list</string>
    <string name="shipment_signature_multi_list_empty">Sign multi list empty</string>
    <string name="shipment_signature_multi_total">Total %d Shipment orders</string>
    <string name="shipment_signature_multi_prev">Prev</string>
    <string name="shipment_signature_multi_sign">Sign</string>
    <string name="shipment_signature_multi_sign_tile">Sign for %d shipment orders?</string>
    <string name="shipment_signature_multi_list_empty_prev">list is empty. Press "prev", then add or re-scan barcode.</string>
    <string name="shipment_signature_multi_driver_upload_list_empty">Driver upload list empty.</string>
    <string name="shipment_signature_multi_guard_upload_list_empty">Guard upload list empty.</string>
    <string name="enter_password">Please enter password</string>
    <string name="password_mismatch">password_mismatch</string>
    <string name="nav_setting">Setting</string>
</resources>
