<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_local_shipping_black_24"
            android:title="@string/nav_guest" />

        <!--item
            android:id="@+id/nav_text"
            android:icon="@drawable/baseline_text_format_black_24"
            android:title="@string/nav_text" /-->
        <item
            android:id="@+id/nav_shipment_check"
            android:icon="@drawable/baseline_check_circle_black_24"
            android:title="@string/nav_shipment_check"
            android:visible="true"/>

        <item
            android:id="@+id/nav_signature"
            android:icon="@drawable/baseline_edit_black_48"
            android:title="@string/nav_signature"
            android:visible="true"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_black_48"
            android:title="@string/nav_setting"
            android:visible="true"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info_black_48"
            android:title="@string/nav_about"
            android:visible="true"/>
    </group>

    <!--item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item-->

</menu>
