<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:id="@+id/shipment_signature_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical">

            <!--Spinner
                android:id="@+id/guestItemSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dialog" /-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDateShipmentSignature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="@dimen/text_size_25"
                    android:text="2020-10-20"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btnDatePickShipmentSignature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_25"
                    android:text="選擇日期"
                    android:layout_weight="1"/>
            </LinearLayout>

            <EditText
                android:id="@+id/editTextShipmentSignatureNo"
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:textSize="@dimen/text_size_25"
                android:hint="@string/input_shipment_no"
                android:textAlignment="center"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1"
                android:lines="1" />

            <LinearLayout
                android:id="@+id/linearLayoutShipmentSignatureHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageViewPrev"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_chevron_left_black_48"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView android:text="@string/shipment_no_and_order_no"
                        android:id="@+id/shipmentSignatureHeader"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/md_black_1000"
                        android:textSize="@dimen/text_size_25"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:layout_weight="1">
                    </TextView>

                    <TextView android:text="@string/customer_no"
                        android:id="@+id/shipmentSignatureContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_25"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:layout_weight="1">
                    </TextView>

                    <TextView android:text=""
                        android:id="@+id/shipmentSignatureShipmentNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textColor="@color/md_black_1000"
                        android:textSize="@dimen/text_size_25"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:visibility="gone">
                    </TextView>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="0"
            android:background="#b7b7b7"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/linearLayoutShipmentSignature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <ListView
                android:id="@+id/listViewShipmentSignature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"/>

            <ListView
                android:id="@+id/listViewShipmentSignatureDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>